--- a/public/contact-ways.html
+++ b/public/contact-ways.html
@@ -58,6 +58,17 @@
             </a>
         </div>
     </div>
+          <!-- Button for the family chat -->
+            <a href="famchat1.html" id="chat-button" class="flex flex-col items-center justify-center bg-blue-600 text-white p-6 rounded-2xl shadow-lg hover:bg-blue-700 transform hover:scale-105 transition-all duration-300">
+                <!-- Icon for the chat -->
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mb-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8s-9-3.582-9-8 4.03-8 9-8 9 3.582 9 8z" />
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 16a4 4 0 100-8 4 4 0 000 8z" />
+                </svg>
+                <span class="text-lg font-semibold">צאט משפחתי חדש- Available since 2026</span>
+            </a>
+        </div>
+    </div>
 
     <script>
         // Translations object with different languages
