--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,6 @@
     <!-- FIX: Applied Tailwind classes directly to each menu item, as @apply is not supported here. -->
     <nav class="menu-bar bg-white/80 backdrop-blur-md sticky top-0 z-50 flex flex-wrap justify-center p-2 md:p-4 gap-2 md:gap-4 shadow-lg rounded-b-2xl transition-all duration-300">
         <a id="menuHome" href="/" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">🏠 עמוד ראשי</a>
-        <a id="menuUpdates" href="about.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>ℹ️</span> עמוד העדכונים</a>
         <a id="menuTree" href="/tree-viewer.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>🧬</span> עץ המשפחה</a>
         <a id="menuBooks" href="/book.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>📖</span>ספר משפחתי</a>
         <a id="menuChat" href="/chat.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>🧑‍💻</span> צ'אט AI</a>
@@ -183,7 +182,7 @@
                 footerText: "© 2025 אתר המשפחה • נבנה באהבה ע\"י המשפחה •",
                 adminLink: "🛠️ ניהול",
                 // FIX: Corrected syntax errors (missing commas, misplaced characters) in the menus array.
-                menus: ["🏠 עמוד ראשי", "ℹ️ עמוד העדכונים", "🧬 עץ המשפחה", "📖 ספר משפחתי", "🧑‍💻 צ'אט AI", "📩 אמצעי תקשורת משפחתיים", "🖼️ גלריית תמונות", "🕯️ קיר זיכרון", "🗓️ ציר זמן", "📆 לוח שנה", "👪 פורום משפחתי", "📖 ביוגרפיות", "📊 סטטיסטיקות", "עדכון פרטים", "חיפוש AI", "מפת נדודים", "📰 עלון", "🔐 כניסת משתמשים", "התנתקות"],
+                menus: ["🏠 עמוד ראשי", "🧬 עץ המשפחה", "📖 ספר משפחתי", "🧑‍💻 צ'אט AI", "📩 אמצעי תקשורת משפחתיים", "🖼️ גלריית תמונות", "🕯️ קיר זיכרון", "🗓️ ציר זמן", "📆 לוח שנה", "👪 פורום משפחתי", "📖 ביוגרפיות", "📊 סטטיסטיקות", "עדכון פרטים", "חיפוש AI", "מפת נדודים", "📰 עלון", "🔐 כניסת משתמשים", "התנתקות"],
                 loggedInAs: "מחובר/ת כ:", role: "תפקיד:", familySide: "צד משפחתי:", guest: "אורח"
             },
             en: {
@@ -202,7 +201,7 @@
                 footerText: "© 2025 Family Website • Built with love by the family •",
                 adminLink: "🛠️ Admin",
                  // FIX: Corrected syntax errors (missing commas) in the menus array.
-                menus: ["🏠 Home", "ℹ️ Updates", "🧬 Family Tree", "📖 Family Book", "🧑‍💻 AI Chat", "📩 Family Contacts", "🖼️ Gallery", "🕯️ Memorial Wall", "🗓️ Timeline", "📆 Calendar", "👪 Family Forum", "📖 Biographies", "📊 Statistics", "Update Details", "AI Search", "Migration Map", "📰 Newsletter", "🔐 Login", "Logout"],
+                menus: ["🏠 Home", "🧬 Family Tree", "📖 Family Book", "🧑‍💻 AI Chat", "📩 Family Contacts", "🖼️ Gallery", "🕯️ Memorial Wall", "🗓️ Timeline", "📆 Calendar", "👪 Family Forum", "📖 Biographies", "📊 Statistics", "Update Details", "AI Search", "Migration Map", "📰 Newsletter", "🔐 Login", "Logout"],
                 loggedInAs: "Logged in as:", role: "Role:", familySide: "Family Side:", guest: "Guest"
             },
             fr: {
@@ -221,7 +220,7 @@
                 footerText: "© 2025 Site de la famille • Construit avec amour par la famille •",
                 adminLink: "🛠️ Admin",
                  // FIX: Corrected syntax errors (missing commas) in the menus array.
-                menus: ["🏠 Accueil", "ℹ️ Mises à jour", "🧬 Arbre généalogique", "📖 livre de famille", "🧑‍💻 Chat IA", "📩 Contacts familiaux", "🖼️ Galerie", "🕯️ Mur commémoratif", "🗓️ Chronologie", "📆 Calendrier", "👪 Forum familial", "📖 Biographies", "📊 Statistiques", "Mettre à jour", "Téléverser vidéo", "Recherche IA", "Carte migrations", "📰 Bulletin", "🔐 Connexion", "Déconnexion"],
+                menus: ["🏠 Accueil",  "🧬 Arbre généalogique", "📖 livre de famille", "🧑‍💻 Chat IA", "📩 Contacts familiaux", "🖼️ Galerie", "🕯️ Mur commémoratif", "🗓️ Chronologie", "📆 Calendrier", "👪 Forum familial", "📖 Biographies", "📊 Statistiques", "Mettre à jour", "Téléverser vidéo", "Recherche IA", "Carte migrations", "📰 Bulletin", "🔐 Connexion", "Déconnexion"],
                 loggedInAs: "Connecté(e) en tant que:", role: "Rôle:", familySide: "Côté de la famille:", guest: "Invité"
             },
             yi: {
@@ -240,7 +239,7 @@
                 footerText: "© 2025 פאמיליע וועבזייט • געבויט מיט ליבע דורך די פאמיליע •",
                 adminLink: "🛠️ אדמין",
                 // FIX: Corrected syntax errors (missing commas) in the menus array.
-                menus: ["🏠 הויפּט בלאַט", "ℹ️ דערהייבונגען", "🧬 פאמיליע בוים", "📖 משפּחה בוך", "🧑‍💻 אינטעליגענט טשאַט", "📩 פאמיליע קאנטאקטן", "🖼️ גאלעריע", "🕯️ אנדענק וואנט", "🗓️ צייט-ליניע", "📆 קאלענדאר", "👪 פאמיליע פארום", "📖 ביאגראפיעס", "📊 סטאטיסטיק", "דערהייבן דעטאלן", "אינטעליגענט זוך", "מאַפּע פון וואַנדערונגען", "📰 נייַבלאַט", "🔐 איינזיין", "אויסלאגן"],
+                menus: ["🏠 הויפּט בלאַט", 🧬 פאמיליע בוים", "📖 משפּחה בוך", "🧑‍💻 אינטעליגענט טשאַט", "📩 פאמיליע קאנטאקטן", "🖼️ גאלעריע", "🕯️ אנדענק וואנט", "🗓️ צייט-ליניע", "📆 קאלענדאר", "👪 פאמיליע פארום", "📖 ביאגראפיעס", "📊 סטאטיסטיק", "דערהייבן דעטאלן", "אינטעליגענט זוך", "מאַפּע פון וואַנדערונגען", "📰 נייַבלאַט", "🔐 איינזיין", "אויסלאגן"],
                 loggedInAs: "אריינגעזען ווי:", role: "ראָלע:", familySide: "פאמיליע זייט:", guest: "גאַסט"
             },
     nl: {
@@ -276,7 +275,6 @@
 "adminLink": "🛠️ Beheer",
 "menus": [
 "🏠 Home",
-"ℹ️ Updates",
 "🧬 Stamboom",
 "📖 Familieboek",
 "🧑‍💻 AI Chat",
