--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,7 @@
                 footerText: "© 2025 אתר המשפחה • נבנה באהבה ע\"י המשפחה •",
                 adminLink: "🛠️ ניהול",
                 // FIX: Corrected syntax errors (missing commas, misplaced characters) in the menus array.
-                menus: ["🏠 עמוד ראשי", "🧬 עץ המשפחה", "📖 ספר משפחתי", "🧑‍💻 צ'אט AI", "📩 אמצעי תקשורת משפחתיים", "🖼️ גלריית תמונות", "🕯️ קיר זיכרון", "🗓️ ציר זמן", "📆 לוח שנה", "👪 פורום משפחתי", "📖 ביוגרפיות", "📊 סטטיסטיקות", "עדכון פרטים", "חיפוש AI", "מפת נדודים", "📰 עלון", "🔐 כניסת משתמשים", "התנתקות"],
+                menus: ["🏠 עמוד ראשי", "🧬 עץ המשפחה", "📖 ספר משפחתי", "🧑‍💻 צ'אט AI", "📩 אמצעי תקשורת משפחתיים", "🖼️ גלריית תמונות", "🕯️ קיר זיכרון", "🗓️ ציר זמן", "📆 לוח שנה", "👪 פורום משפחתי", "📖 ביוגרפיות", "📊 סטטיסטיקות", "עדכון פרטים", "מפת נדודים", "📰 עלון", "🔐 כניסת משתמשים", "התנתקות"],
                 loggedInAs: "מחובר/ת כ:", role: "תפקיד:", familySide: "צד משפחתי:", guest: "אורח"
             },
             en: {
@@ -201,7 +201,7 @@
                 footerText: "© 2025 Family Website • Built with love by the family •",
                 adminLink: "🛠️ Admin",
                  // FIX: Corrected syntax errors (missing commas) in the menus array.
-                menus: ["🏠 Home", "🧬 Family Tree", "📖 Family Book", "🧑‍💻 AI Chat", "📩 Family Contacts", "🖼️ Gallery", "🕯️ Memorial Wall", "🗓️ Timeline", "📆 Calendar", "👪 Family Forum", "📖 Biographies", "📊 Statistics", "Update Details", "AI Search", "Migration Map", "📰 Newsletter", "🔐 Login", "Logout"],
+                menus: ["🏠 Home", "🧬 Family Tree", "📖 Family Book", "🧑‍💻 AI Chat", "📩 Family Contacts", "🖼️ Gallery", "🕯️ Memorial Wall", "🗓️ Timeline", "📆 Calendar", "👪 Family Forum", "📖 Biographies", "📊 Statistics", "Update Details", "Migration Map", "📰 Newsletter", "🔐 Login", "Logout"],
                 loggedInAs: "Logged in as:", role: "Role:", familySide: "Family Side:", guest: "Guest"
             },
             fr: {
@@ -220,7 +220,7 @@
                 footerText: "© 2025 Site de la famille • Construit avec amour par la famille •",
                 adminLink: "🛠️ Admin",
                  // FIX: Corrected syntax errors (missing commas) in the menus array.
-                menus: ["🏠 Accueil",  "🧬 Arbre généalogique", "📖 livre de famille", "🧑‍💻 Chat IA", "📩 Contacts familiaux", "🖼️ Galerie", "🕯️ Mur commémoratif", "🗓️ Chronologie", "📆 Calendrier", "👪 Forum familial", "📖 Biographies", "📊 Statistiques", "Mettre à jour", "Téléverser vidéo", "Recherche IA", "Carte migrations", "📰 Bulletin", "🔐 Connexion", "Déconnexion"],
+                menus: ["🏠 Accueil",  "🧬 Arbre généalogique", "📖 livre de famille", "🧑‍💻 Chat IA", "📩 Contacts familiaux", "🖼️ Galerie", "🕯️ Mur commémoratif", "🗓️ Chronologie", "📆 Calendrier", "👪 Forum familial", "📖 Biographies", "📊 Statistiques", "Mettre à jour", "Carte migrations", "📰 Bulletin", "🔐 Connexion", "Déconnexion"],
                 loggedInAs: "Connecté(e) en tant que:", role: "Rôle:", familySide: "Côté de la famille:", guest: "Invité"
             },
             yi: {
@@ -239,7 +239,7 @@
                 footerText: "© 2025 פאמיליע וועבזייט • געבויט מיט ליבע דורך די פאמיליע •",
                 adminLink: "🛠️ אדמין",
                 // FIX: Corrected syntax errors (missing commas) in the menus array.
-                menus: ["🏠 הויפּט בלאַט", 🧬 פאמיליע בוים", "📖 משפּחה בוך", "🧑‍💻 אינטעליגענט טשאַט", "📩 פאמיליע קאנטאקטן", "🖼️ גאלעריע", "🕯️ אנדענק וואנט", "🗓️ צייט-ליניע", "📆 קאלענדאר", "👪 פאמיליע פארום", "📖 ביאגראפיעס", "📊 סטאטיסטיק", "דערהייבן דעטאלן", "אינטעליגענט זוך", "מאַפּע פון וואַנדערונגען", "📰 נייַבלאַט", "🔐 איינזיין", "אויסלאגן"],
+                menus: ["🏠 הויפּט בלאַט"," 🧬 פאמיליע בוים", "📖 משפּחה בוך", "🧑‍💻 אינטעליגענט טשאַט", "📩 פאמיליע קאנטאקטן", "🖼️ גאלעריע", "🕯️ אנדענק וואנט", "🗓️ צייט-ליניע", "📆 קאלענדאר", "👪 פאמיליע פארום", "📖 ביאגראפיעס", "📊 סטאטיסטיק", "דערהייבן דעטאלן", "מאַפּע פון וואַנדערונגען", "📰 נייַבלאַט", "🔐 אריינלאגן", "אויסלאגן"],
                 loggedInAs: "אריינגעזען ווי:", role: "ראָלע:", familySide: "פאמיליע זייט:", guest: "גאַסט"
             },
     nl: {
@@ -287,7 +287,6 @@
 "📖 Biografieën",
 "📊 Statistieken",
 "Gegevens Bijwerken",
-"AI Zoeken",
 "Migratiekaart",
 "📰 Nieuwsbrief",
 "🔐 Inloggen",
